# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  11 Aug 2005; Marius Mauch <genone@gentoo.org> pym/elog_modules/mod_mail.py:
  Fixed missing portage_exception import and type errors in the exception
  handler.

  10 Aug 2005; Mike Frysinger <vapier@gentoo.org> bin/quickpkg:
  Call gawk instead of awk so non-GNU systems work #102050 by Stephen Bennett.
  Also clean up the script a bit.

  29 Jul 2005; Mike Frysinger <vapier@gentoo.org> bin/prepallman:
  Rather than use a hardcoded list and bash expansion, let find locate man
  directories for us.  This fixes the issues of running prepman on symlinks 
  to paths outside of $D #98017 by Andrej Filipcic.

  29 Jul 2005; Mike Frysinger <vapier@gentoo.org> bin/fowners bin/fperms:
  Rewrite by Aron Griffis to use bash code so we don't have to parse arguments 
  ourselves #97324.

  25 Jul 2005; Mike Frysinger <vapier@gentoo.org> 
  bin/ebuild-default-functions.sh:
  Fix IMAGE / D confusion in the pkg_preinst function.  Now ebuilds do not
  have to care/screw around with IMAGE.

  20 Jul 2005; Brian Harring <ferringb@gentoo.org> bin/ebuild*.{sh,lib}:
  Harring broke cvs.  If people ignored the warnings, I'll fix it till the 
  next time changes in rewrite cause it to break again.

  04 Jul 2005; Mike Frysinger <vapier@gentoo.org>
  bin/ebuild-default-functions.sh:
  Fix gnuconfig find expression #93363 by TGL.

  23 Jun 2005; Mike Frysinger <vapier@gentoo.org>
  bin/ebuild-default-functions.sh:
  Update the scanelf RUNPATH check to abort on null paths.

  17 Jun 2005; Mike Frysinger <vapier@gentoo.org> bin/repoman:
  Report exit status if gpg failed to return with 0.
